[project]
name = "tracker"
version = "1.0.0"
description = "Telegram bot for time tracking with Google Sheets integration"
authors = [
    {name = "Launch Robotics", email = "info@launchrobotics.com"},
]
dependencies = [
    "python-telegram-bot>=20.7",
    "pygsheets>=2.0.6",
    "pandas>=1.3.0",
]
requires-python = ">=3.8"

[project.scripts]
tracker = "tracker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = []